Update sources. Add option to reload the iframe when the content updates
